# website

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  README.md  docker-compose.yml  input.css  package-lock.json
assets/: style.css  tailwind.css
dockerfiles/: dev.dockerfile  prod.dockerfile
migrations/2025-05-13-114520_create_subscriptions/: up.sql
migrations/2025-05-13-115305_create_prices/: up.sql
migrations/2025-05-13-115336_create_features/: down.sql  up.sql
migrations/2025-05-13-115350_create_subscriptions_features/: down.sql  up.sql
src/: main.rs  schema.rs
src/components/: button.rs  itemcard.rs  mod.rs
src/components/cards/: itemcard.rs  mod.rs  pricingcard.rs
src/components/forms/inputs/: mod.rs  text.rs  textarea.rs
src/components/icons/: facebook.rs  github.rs  instagram.rs  linkedin.rs  mod.rs
src/components/layouts/: footer.rs  mod.rs  navbar.rs
src/components/logos/: full.rs  icon.rs  mod.rs
src/helpers/: mod.rs
src/layouts/: base.rs  mod.rs  navbar.rs
src/locales/: en.ftl  fr.ftl
src/models/: feature.rs  mod.rs  price.rs  subscription.rs
src/views/: contact.rs  home.rs  mod.rs  pricing.rs  product.rs  test_subscriptions.rs
