[package]
name = "verbali-website"
version = "0.1.0"
authors = ["Thomas <thomas.lesciellour@gmail.com>"]
edition = "2021"

[dependencies]
verbali-design-system = { git = "https://github.com/verbali/design-system.git", branch = "main" }
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
unic-langid = "0.9.5"
dioxus-i18n = "0.4.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
