[package]
name = "verbali-website"
version = "0.1.0"
authors = ["Thomas <thomas.lesciellour@gmail.com>"]
edition = "2021"

[dependencies]
verbali-design-system = { git = "https://github.com/verbali/design-system.git", branch = "main" }
diesel = { version = "2.2.0", optional = true, features = ["postgres"] }
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dotenvy = "0.15"
unic-langid = "0.9.5"
dioxus-i18n = "0.4.3"
serde = "1.0.219"
serde_json = "1.0.140"

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:diesel"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
